--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,16 @@ header {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 0;
+    width: 25px;
+    height: 25px;
+    top: 25%;
+    right: 15px;
+  }
 
   input {
     border: 0;
